--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ ecdsa==0.19.1
 email_validator==2.2.0
 fastapi==0.119.0
 filetype==1.2.0
+anthropic>=0.39.0
 google-ai-generativelanguage==0.9.0
 google-api-core==2.28.1
 google-auth==2.41.1
