--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,9 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose==3.3.0
 pytokens==0.1.10
+authlib==1.3.0
+google-auth==2.41.1
+itsdangerous==2.2.0
 PyYAML==6.0.3
 requests==2.32.5
 requests-toolbelt==1.0.0
